[package]
name = "smtpbis"
version = "0.1.7"
authors = ["Jonathan Bastien-Filiatrault <jonathan@zerospam.ca>"]
edition = "2018"
description = "Asynchronous ESMTP service library."
license = "GPL-3.0+"
categories = ["email", "network-programming"]
readme = "README.md"
homepage = "https://github.com/zerospam/smtpbis"
repository = "https://github.com/zerospam/smtpbis.git"

[dependencies]
rustyknife = {version="0.2", features=["quoted-string-rfc2047"]}
tokio = {version="0.3", features=["signal", "io-util", "sync", "signal", "net", "rt-multi-thread"]}
tokio-util = {version="0.5", features=["codec"]}
bytes = "0.6"
futures = "0.3"
futures-util = "0.3"
tokio-rustls = "0.20"
nom = "6.0"
async-trait = "0.1.10"
