[package]
name = "smtpbis"
version = "0.1.8"
authors = ["Jonathan Bastien-Filiatrault <jonathan@zerospam.ca>"]
edition = "2018"
description = "Asynchronous ESMTP service library."
license = "GPL-3.0+"
categories = ["email", "network-programming"]
readme = "README.md"
homepage = "https://github.com/zerospam/smtpbis"
repository = "https://github.com/zerospam/smtpbis.git"

[dependencies]
rustyknife = { git = "https://github.com/Tsai002/rustyknife.git" }
tokio = {version="1.0", features=["signal", "io-util", "sync", "signal", "net", "rt-multi-thread"]}
tokio-util = {version="0.7.1", features=["codec"]}
bytes = "1.1.0"
async-trait = "0.1.53"
futures = "0.3"
futures-util = "0.3"
base64 = "0.13.0"

[dev-dependencies]
rustls-pemfile = "0.3"
tokio-rustls = "0.23"